change SignalCliEventListener class with best practices